[gd_scene load_steps=19 format=3 uid="uid://ds0oir786i581"]

[ext_resource type="Script" path="res://scene_scripts/view_page.gd" id="1_1u0oe"]
[ext_resource type="Texture2D" uid="uid://bs8ygxnqe4gaq" path="res://ui/Icons/shadedLight24.png" id="2_1ytp8"]
[ext_resource type="Texture2D" uid="uid://dhb3wr5irg0h8" path="res://ui/Icons/shadedLight25.png" id="3_4ms6k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dio2d"]
bg_color = Color(0.168804, 0.671628, 0.738642, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kgntx"]
bg_color = Color(0.0182843, 0.270847, 0.46701, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_v83ha"]
load_path = "res://.godot/imported/star.png-74dd3b88e72f44d417c610993df44588.s3tc.ctex"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j1tfk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fs746"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n0bnd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ciyw1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gixq5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ncar"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v7uye"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aom4v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xwuqp"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
border_width_right = 3
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkx2y"]
bg_color = Color(0.0196078, 0.270588, 0.466667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogsjm"]
bg_color = Color(0.0196078, 0.270588, 0.466667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wgtoy"]
bg_color = Color(0.0196078, 0.270588, 0.466667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[node name="ViewPage" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 355.0
offset_bottom = 476.0
script = ExtResource("1_1u0oe")

[node name="RightBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1944.0
offset_bottom = 737.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dio2d")

[node name="BannerBackground" type="Panel" parent="RightBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -684.5
offset_top = -427.5
offset_right = 1007.5
offset_bottom = 394.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kgntx")

[node name="ImageContainer" type="HBoxContainer" parent="RightBackground/BannerBackground"]
layout_mode = 0
offset_left = 39.0
offset_top = 38.0
offset_right = 733.0
offset_bottom = 782.0

[node name="BadgeIcon" type="TextureRect" parent="RightBackground/BannerBackground"]
z_index = 10
layout_mode = 2
offset_left = 670.0
offset_top = 80.0
offset_right = 715.0
offset_bottom = 125.0
texture = SubResource("CompressedTexture2D_v83ha")
expand_mode = 1
stretch_mode = 4

[node name="ImageDescription" type="RichTextLabel" parent="RightBackground/BannerBackground"]
layout_mode = 0
offset_left = 757.0
offset_top = 140.0
offset_right = 1635.0
offset_bottom = 776.0
theme_override_font_sizes/normal_font_size = 35

[node name="ScrollLeft" type="Button" parent="RightBackground"]
layout_mode = 0
offset_left = 467.0
offset_top = 40.0
offset_right = 569.0
offset_bottom = 144.0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_j1tfk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_fs746")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_n0bnd")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ciyw1")
icon = ExtResource("2_1ytp8")
icon_alignment = 1
expand_icon = true

[node name="ScrollRight" type="Button" parent="RightBackground"]
layout_mode = 0
offset_left = 2054.0
offset_top = 40.0
offset_right = 2156.0
offset_bottom = 144.0
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gixq5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6ncar")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_v7uye")
theme_override_styles/normal = SubResource("StyleBoxEmpty_aom4v")
icon = ExtResource("3_4ms6k")
icon_alignment = 1
expand_icon = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 418.0
offset_bottom = 1203.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xwuqp")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -568.5
offset_right = 192.0
offset_bottom = 578.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1000
alignment = 2

[node name="MarkPage" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_vkx2y")
theme_override_styles/normal = SubResource("StyleBoxFlat_ogsjm")
text = "Stage Mark"

[node name="ToAlbumPage" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_wgtoy")
text = "Album Page"
